Fix overlapping problem.

--- a/pages/projects/projects.css
+++ b/pages/projects/projects.css
@@ -29,6 +29,11 @@ img {
   gap: 3rem;
 }
 
+h2 {
+  position: sticky;
+  text-shadow: 0.2rem 0.2rem 0.2rem var(--color-black);
+}
+
 h4 {
   font-size: 2.5rem;
   padding-left: 4rem;
